simple test for auth

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
+<label>Access token: </label><span id="accesstoken">Waiting</span> <button id="login">Login</button>
     
 <script src="client.js"></script>
 </body>
