Add new theme to syntax highlighter, comment out verbose debug despite the stability it provides.

--- a/static/sockettester.html
+++ b/static/sockettester.html
@@ -3,7 +3,7 @@
     
 <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
 <link id="style" rel="stylesheet" href="style.css" />
-<link id="hljs-style" rel="stylesheet" href="vs.css" type="text/css" />
+<link id="hljs-style" rel="stylesheet" href="monokai_sublime.css" type="text/css" />
 
 <script>
     
