Filters on views query widget

--- a/modules/about/static/index.html
+++ b/modules/about/static/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <section ng-controller="C" entities="group">
+  <section ng-controller="C" entities="group" queries="type:IS:public">
 
     {{data.group}}
 
