Entity author and type fields plus creation hooks

--- a/modules/about/static/index.html
+++ b/modules/about/static/index.html
@@ -9,7 +9,7 @@
 
   <section ng-controller="C" entities="group" queries="type:IS:public">
 
-    {{data.group}}
+    <h2>{{data.group[0].name}}</h2>
 
   </section>
 
