Admin restructuring and login improvements

--- a/modules/admin/edit.html
+++ b/modules/admin/edit.html
@@ -3,14 +3,14 @@
 
 <head>
 
-  <script type="text/javascript" src="/jsonform/deps/jquery.min.js"></script>
-  <script type="text/javascript" src="/jsonform/deps/underscore.js"></script>
-  <script type="text/javascript" src="/jsonform/deps/opt/jquery.ui.core.js"></script>
-  <script type="text/javascript" src="/jsonform/deps/opt/jquery.ui.widget.js"></script>
-  <script type="text/javascript" src="/jsonform/deps/opt/jquery.ui.mouse.js"></script>
-  <script type="text/javascript" src="/jsonform/deps/opt/jquery.ui.sortable.js"></script>
-  <script type="text/javascript" src="/jsonform/lib/jsonform.js"></script>
-  <link rel="stylesheet" style="text/css" href="/jsonform/deps/opt/bootstrap.css" />
+  <script type="text/javascript" src="/admin/jsonform/deps/jquery.min.js"></script>
+  <script type="text/javascript" src="/admin/jsonform/deps/underscore.js"></script>
+  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.core.js"></script>
+  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.widget.js"></script>
+  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.mouse.js"></script>
+  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.sortable.js"></script>
+  <script type="text/javascript" src="/admin/jsonform/lib/jsonform.js"></script>
+  <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
 
 
 
