--- a/modules/admin/edit.html
+++ b/modules/admin/edit.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.sortable.js"></script>
   <script type="text/javascript" src="/admin/jsonform/lib/jsonform.js"></script>
   <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
+  <link rel="stylesheet" href="/admin/admin.css" />
 
 
 
@@ -19,11 +20,17 @@
 
 <body>
 
+  <h1></h1>
+
   <form></form>
 
 
   <script>
     $(document).ready(function() {
+
+      var type = document.location.pathname.split("/")[document.location.pathname.split("/").length - 1];
+
+      $("h1").text("Edit " + type);
 
       $.get(document.location.pathname + "/form").done(function(data) {
 
