--- a/modules/admin/permissions.html
+++ b/modules/admin/permissions.html
@@ -3,14 +3,17 @@
 
 <head>
 
-  <script type="text/javascript" src="admin/jsonform/deps/jquery.min.js"></script>
-  <script type="text/javascript" src="admin/jsonform/deps/underscore.js"></script>
-  <link rel="stylesheet" style="text/css" href="admin/jsonform/deps/opt/bootstrap.css" />
-
+  <script type="text/javascript" src="jsonform/deps/jquery.min.js"></script>
+  <script type="text/javascript" src="jsonform/deps/underscore.js"></script>
+  <link rel="stylesheet" style="text/css" href="jsonform/deps/opt/bootstrap.css" />
+  <link rel="stylesheet" href="/admin/admin.css" />
+  
 </head>
 
 
 <body>
+  
+  <h1>Permissions</h1>
 
   <table id="permissions">
     <tr id="roles"></tr>
