--- a/modules/admin/create.html
+++ b/modules/admin/create.html
@@ -2,15 +2,20 @@
 <html>
 
 <head>
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  
+  <script src="/admin/jsonform/deps/jquery.min.js"></script>
+  <script src="/admin/jsonform/deps/underscore-min.js"></script>
+  <script src="/admin/jsonform/deps/opt/jquery.ui.custom.js"></script>
+  <script src="/admin/jsonform/deps/opt/bootstrap-dropdown.js"></script>
+  <script src="/admin/jsonform/deps/opt/bootstrap-typeahead.js"></script>
+  <script src="/admin/jsonform/deps/opt/bootstrap-tagsinput.min.js"></script>
+  <script src="/admin/jsonform/deps/opt/spectrum.js"></script>
+  <script src="/admin/jsonform/deps/opt/jquery.transloadit2.js"></script>
 
-  <script type="text/javascript" src="/admin/jsonform/deps/jquery.min.js"></script>
-  <script type="text/javascript" src="/admin/jsonform/deps/underscore.js"></script>
-  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.core.js"></script>
-  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.widget.js"></script>
-  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.mouse.js"></script>
-  <script type="text/javascript" src="/admin/jsonform/deps/opt/jquery.ui.sortable.js"></script>
-  <script type="text/javascript" src="/admin/jsonform/lib/jsonform.js"></script>
-  <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
+  <script src="/admin/jsonform/lib/jsonform.js"></script>
+
   <link rel="stylesheet" href="/admin/admin.css" />
 
 </head>
