GUI entity type creation

--- a/modules/admin/static/entity.html
+++ b/modules/admin/static/entity.html
@@ -86,7 +86,7 @@
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
               "required": true
             },
-            "name": {
+            "label": {
               "type": "string",
               "title": "Label"
             },
@@ -114,7 +114,7 @@
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
               "required": true
             },
-            "name": {
+            "label": {
               "type": "string",
               "title": "Label"
             },
