--- a/modules/admin/static/entity.html
+++ b/modules/admin/static/entity.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -37,7 +36,7 @@
           "type": "object",
           "title": "Text",
           "properties": {
-            "system name": {
+            "system-name": {
               "type": "string",
               "title": "System name",
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
@@ -70,7 +69,7 @@
           "type": "object",
           "title": "Long text",
           "properties": {
-            "system name": {
+            "system-name": {
               "type": "string",
               "title": "System name",
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
@@ -103,7 +102,7 @@
           "type": "object",
           "title": "Date",
           "properties": {
-            "system name": {
+            "system-name": {
               "type": "string",
               "title": "System name",
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
@@ -131,7 +130,7 @@
           "type": "object",
           "title": "Boolean",
           "properties": {
-            "system name": {
+            "system-name": {
               "type": "string",
               "title": "System name",
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
@@ -151,7 +150,7 @@
           "type": "object",
           "title": "options",
           "properties": {
-            "system name": {
+            "system-name": {
               "type": "string",
               "title": "System name",
               "description": "The name of the field when stored in the database (this can't be changed easily once set)",
@@ -253,7 +252,7 @@
         "type": "object",
         "title": "Object",
         "properties": {
-          "system name": {
+          "system-name": {
             "type": "string",
             "title": "System name",
             "description": "The name of the field when stored in the database (this can't be changed easily once set)",
@@ -299,25 +298,6 @@
         "items": {
           "type": "selectfieldset",
           "title": "Choose a field type",
-          "onChange": function(evt) {
-            var value = $(evt.target).val();
-            var inputs = $(evt.target).closest("li").find("[name]");
-
-            var number = $(evt.target).closest("li").index();
-
-            $.each(inputs, function(index, element) {
-
-              if ($(element).attr("name").indexOf("_") === -1) {
-
-                $(element).attr("name", $(element).attr("name").replace(" ", "-"));
-
-                $(element).attr("name", $(element).attr("name") + "_" + number);
-
-              }
-
-            });
-
-          },
           "items": [{
             "key": "help",
             "legend": "Pick a field"
@@ -346,19 +326,25 @@
         "title": "Submit"
       }],
       onSubmit: function(errors, values) {
-                
+
+        //Convert field collection names for processing
+
         $.each($("*[name*='object.subfields']"), function(index, element) {
-          
+
           var fieldnumber = $(element).attr("name").split(".")[1].replace("subfields[", "").replace("]", "");
 
           $(element).attr("name", $(element).attr("name").replace("object.subfields[" + fieldnumber + "].", "fc" + fieldnumber));
 
         });
 
+        //Suffix fields to prevent duplicates
+
         $.each($("*[name]"), function(index, element) {
 
+          var parent = $(element).parents('*[data-idx]').last().attr("data-idx");
+
           if ($(element).attr("name").indexOf("entityname") === -1) {
-            $(element).attr("name", $(element).attr("name") + "_" + index);
+            $(element).attr("name", $(element).attr("name") + "_" + parent + "_" + index);
           }
 
         });
