Share readme between about and root

--- a/modules/about/static/index.html
+++ b/modules/about/static/index.html
@@ -34,7 +34,7 @@
   <script>
     $(function($) {
       // essential settings
-      ditto.index = "README.md",
+      ditto.index = "../about/readme.md",
         ditto.sidebar_file = "sidebar.md",
 
         // optional settings if you want github search
