--- a/modules/about/static/index.html
+++ b/modules/about/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Docs</title>
+  <title>API</title>
 
   <!-- JQUERY -->
 
@@ -24,7 +24,8 @@
 <body>
   <!-- ESSENTIAL -->
   <div id="sidebar"></div>
-  <div id="content"></div>
+  <div id="content">
+  </div>
   <div id="hide"></div>
 
   <!-- OPTIONAL -->
